# microkg

./: LICENSE  Makefile  Pipfile  README.md  install.sh  pyproject.toml
microkg/: __init__.py  cli.py  meta.py  parser.py  releaser.py  test_module.py
releases/latest/: window.txt
sources/: cont.txt  rout.txt
